<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_scroll_margin">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.synnebit.myfirstapplication.BinomialExpansion"
    tools:showIn="@layout/app_bar_quadratic">

    <TextView android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/binomial_expansion_welcome"
        android:textSize="32sp"
        android:textColor="#000000"/>
    <TextView android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:paddingBottom="16dp"
        android:text="@string/expansion_description"
        android:textSize="24sp"
        android:textColor="#000000"/>
    <TextView android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:paddingBottom="16dp"
        android:text="@string/expansion_detail"
        android:textSize="20sp"
        android:textColor="#000000"/>
    <TextView android:id="@+id/description_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail"
        android:text="@string/x_prompt"
        android:textSize="20sp"
        android:textColor="#000000"/>
    <EditText android:id="@+id/x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_x"
        />
    <TextView android:id="@+id/description_y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/x"
        android:text="@string/y_prompt"
        android:textSize="20sp"
        android:textColor="#000000"/>
    <EditText android:id="@+id/y"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_y"
        />
    <TextView android:id="@+id/description_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/y"
        android:text="@string/a_prompt"
        android:textSize="20sp"
        android:textColor="#000000"/>
    <EditText android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_a"
        android:inputType="phone"
        />
    <TextView android:id="@+id/description_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a"
        android:text="@string/b_prompt"
        android:textSize="20sp"
        android:textColor="#000000"/>
    <EditText android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_b"
        android:inputType="phone"
        />
    <TextView android:id="@+id/description_n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b"
        android:text="@string/n_prompt"
        android:textSize="20sp"
        android:textColor="#000000"/>
    <EditText android:id="@+id/n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_n"
        android:inputType="phone"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/n"
        android:text="@string/button_expand"
        android:onClick="sendMessage" />

</RelativeLayout>
    </ScrollView>