<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.synnebit.myfirstapplication.Pascal"
    tools:showIn="@layout/app_bar_pascal">

    <TextView android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/pascal_welcome"
        android:textSize="32sp"
        android:textColor="#000000"/>
    <TextView android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:paddingBottom="16dp"
        android:text="@string/pascal_description"
        android:textSize="24sp"
        android:textColor="#000000"/>
    <TextView android:id="@+id/row_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:text="@string/row_prompt"
        android:textSize="20sp"
        android:textColor="#000000"/>
    <EditText android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row_prompt"
        android:inputType="phone"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row"
        android:text="@string/button_generate"
        android:onClick="sendMessage" />

</RelativeLayout>
